--- a/assets/main/style.css
+++ b/assets/main/style.css
@@ -384,7 +384,55 @@ h5 {
 }
 
 footer section{
-	background-color: grey;
 	text-align: center;
 }
 
+.login-box{
+  width: 280px;
+  color: white;
+  margin: auto;
+}
+
+.login-box h1{
+  float: left;
+  font-size: 40px;
+  border-bottom: 6px solid red;
+  margin-bottom: 50px;
+  padding: 13px 0;
+}
+.textbox{
+  width: 100%;
+  overflow: hidden;
+  font-size: 20px;
+  padding: 8px 0;
+  margin: 8px 0;
+  border-bottom: 1px solid red;
+}
+
+.textbox i{
+  width: 26px;
+  float: left;
+  text-align: center;
+}
+
+.textbox input{
+  border: none;
+  outline: none;
+  background: none;
+  color: white;
+  font-size: 18px;
+  width: 80%;
+  float: left;
+  margin: 0 10px;
+}
+
+.btn{
+  width: 100%;
+  background: none;
+  border: 2px solid red;
+  color: white;
+  padding: 5px;
+  font-size: 18px;
+  cursor: pointer;
+  margin: 12px 0;
+}
