--- a/assets/main/style.css
+++ b/assets/main/style.css
@@ -31,7 +31,7 @@ body {
 	justify-content: space-between;
 	height: 100%;
 	width: 100%;
-	background-color: rgba(44, 44, 44, 1);
+	background-image: linear-gradient(to right top, #e1cbd8, #dbc1d8, #d0b9da, #c0b2de, #abace2, #aab0e5, #a9b5e8, #a9b9ea, #c1c8ee, #d7d8f2, #eae9f6, #fbfbfb);
 }
 
 .navbar {
@@ -47,8 +47,9 @@ body {
 }
 
 .navbar li a {
+	text-transform: uppercase;
 	display: block;
-	color: white;
+	color: black;
 	text-align: center;
 	padding: 14px 16px;
 	text-decoration: none;
@@ -69,11 +70,11 @@ li a:hover {
 
 .container .Food-Text h1 {
 	font-size: 70px;
-	color: white;
+	color: black;
 }
 
 h2,h3 {
-	color: white;
+	color: black;
 	text-align: center;
 }
 
@@ -134,6 +135,10 @@ p {
 	color: black;
 }
 
+.MenuBox h3{
+	color: black;
+}
+
 .MenuBox ul li img {
 	width: 60px;
 }
@@ -177,10 +182,11 @@ p {
 
 h3 {
 	font-size: 40px;
+	color: blue;
 }
 
 h2{
-	color: gray;
+	color: grey;
 }
 
 #tabs {
@@ -211,6 +217,14 @@ ul li {
 
 #ReviewsSect{
 	margin-top: 60px;
+}
+
+#Reviews h3{
+	color: black;
+}
+
+#ReviewsSect h3{
+	color:black;
 }
 
 #tabs-1 {
@@ -268,6 +282,10 @@ h5 {
 	margin-top: 300px;
 }
 
+#ContactScroll{
+	color: black;
+}
+
 .Delivery-Box {
 	width: 100%;
 	height: 300px;
@@ -277,6 +295,12 @@ h5 {
 
 #DeliveryP {
 	margin-top: 50px;
+	color:black;
+}
+
+
+#DeliverySect h3 {
+	color:purple;
 }
 
 .parent-Deliver {
@@ -377,18 +401,7 @@ h5 {
 	top: 1px;
 }
 
-@media only screen and (max-width: 1350px) {
-	#DeliverySect .parent-Deliver {
-		display: block;
-	}
-
-	#intro-menu .sushiimg{
-		margin-top: -30%;
-	}
-
-}
-
-footer section{
+footer{
 	text-align: center;
 }
 
@@ -405,13 +418,14 @@ footer section{
   margin-bottom: 50px;
   padding: 13px 0;
 }
+
 .textbox{
   width: 100%;
   overflow: hidden;
   font-size: 20px;
   padding: 8px 0;
   margin: 8px 0;
-  border-bottom: 1px solid red;
+  border-bottom: 1px solid black;
 }
 
 .textbox i{
@@ -434,10 +448,94 @@ footer section{
 .btn{
   width: 100%;
   background: none;
-  border: 2px solid red;
+  border: 2px solid black;
   color: white;
   padding: 5px;
   font-size: 18px;
   cursor: pointer;
   margin: 12px 0;
+}
+
+#offices{
+	color: black;
+	margin-top: 100px;
+}
+
+#location-office .parent-location {
+	margin-top: 50px;
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	grid-template-rows: 1fr;
+	grid-column-gap: 30px;
+	grid-row-gap: 0px;
+	text-align: center;
+}
+
+#location-office .parent-location li:nth-child(1){
+	grid-area: 1 / 1 / 2 / 2;
+}
+
+#location-office .parent-location li:nth-child(2){
+	grid-area: 1 / 2 / 2 / 3;
+}
+
+#location-office .parent-location li:nth-child(3){
+	grid-area: 1 / 3 / 2 / 4;
+}
+
+footer{
+	background-image: linear-gradient(to bottom, #40454c, #30373b, #232a2a, #191c1b, #0c0d0b);
+	height: 350px;
+}
+
+footer p{
+	color: white;
+}
+
+footer h2{
+	color: white;
+}
+
+footer ul{
+	display: grid;
+	grid-template-columns: repeat(4, 1fr);
+	grid-template-rows: 1fr;
+	grid-column-gap: 50px;
+	grid-row-gap: 0px;
+}
+
+footer ul li:nth-child(1){
+	grid-area: 1 / 1 / 2 / 2;
+}
+
+footer ul li:nth-child(2){
+	grid-area: 1 / 2 / 2 / 3;
+}
+
+footer ul li:nth-child(3){
+	grid-area: 1 / 3 / 2 / 4;
+}
+
+footer ul li:nth-child(4){
+	grid-area: 1 / 4 / 2 / 5;
+}
+
+mark{
+	color: red;
+	background-color: transparent;
+}
+
+@media only screen and (max-width: 1350px) {
+	#DeliverySect .parent-Deliver {
+		display: block;
+	}
+
+	#intro-menu .sushiimg{
+		margin-top: -30%;
+	}
+
+	footer{
+		height: 500px;
+	}
+
 }
