--- a/assets/main/media.css
+++ b/assets/main/media.css
@@ -42,6 +42,20 @@
     }
 }
 
+@media only screen and (max-width: 880px) {
+    footer {
+       height: 700px;
+    }
+}
+
+@media only screen and (max-width: 624px) {
+    footer {
+        height: 1300px;
+    }
+}
+
+
+
 @media only screen and (max-width: 571px) {
     #location-office ul {
         display: block !important;
